rs/type-registry/derive/tests/snapshots/aliases.snap
---
source: rs/type-registry/derive/src/lib.rs
expression: formatted
---
#[automatically_derived]
impl<T: ::sails_type_registry::TypeInfo> ::sails_type_registry::TypeInfo for Aliases<T> {
    type Identity = Self;
    fn module_path() -> &'static str {
        ::core::module_path!()
    }
    fn type_decl(
        registry: &mut ::sails_type_registry::Registry,
    ) -> ::sails_type_registry::ast::TypeDecl {
        let base_name = ::sails_type_registry::alloc::string::String::from("Aliases");
        let generics = ::sails_type_registry::alloc::vec![
            < T as ::sails_type_registry::TypeInfo > ::type_decl(registry)
        ];
        registry
            .register_named_type_with_dependencies(
                <Self as ::sails_type_registry::TypeInfo>::META,
                base_name,
                generics,
                |registry| {
                    let _ = <Outer<
                        T,
                    > as ::sails_type_registry::TypeInfo>::type_decl(registry);
                    let _ = <Middle<
                        T,
                    > as ::sails_type_registry::TypeInfo>::type_decl(registry);
                },
            )
    }
    fn type_def(
        registry: &mut ::sails_type_registry::Registry,
    ) -> ::core::option::Option<::sails_type_registry::ast::Type> {
        let base_name = ::sails_type_registry::alloc::string::String::from("Aliases");
        ::core::option::Option::Some({
            let __builder = ::sails_type_registry::builder::TypeBuilder::new()
                .name(base_name)
                .param("T");
            let composite = __builder.composite();
            composite
                .field("field")
                .doc("Deeply nested aliases: Result<Vec<(T, bool)>, String>")
                .ty({
                    if let ::core::option::Option::Some(__registered) = registry
                        .get_registered::<Outer<T>>()
                    {
                        let __name = registry
                            .get_type(__registered.type_ref)
                            .expect("registry entry exists")
                            .name
                            .clone();
                        ::sails_type_registry::ast::TypeDecl::named_with_generics(
                            __name,
                            ::sails_type_registry::alloc::vec![
                                ::sails_type_registry::ast::TypeDecl::generic("T")
                            ],
                        )
                    } else {
                        <Outer<
                            T,
                        > as ::sails_type_registry::TypeInfo>::type_decl(registry)
                    }
                })
                .field("direct")
                .doc("Direct use of intermediate alias")
                .ty({
                    if let ::core::option::Option::Some(__registered) = registry
                        .get_registered::<Middle<T>>()
                    {
                        let __name = registry
                            .get_type(__registered.type_ref)
                            .expect("registry entry exists")
                            .name
                            .clone();
                        ::sails_type_registry::ast::TypeDecl::named_with_generics(
                            __name,
                            ::sails_type_registry::alloc::vec![
                                ::sails_type_registry::ast::TypeDecl::generic("T")
                            ],
                        )
                    } else {
                        <Middle<
                            T,
                        > as ::sails_type_registry::TypeInfo>::type_decl(registry)
                    }
                })
                .build()
        })
    }
}
