rs/type-registry/derive/tests/snapshots/generics_and_containers.snap
---
source: rs/type-registry/derive/src/lib.rs
expression: formatted
---
#[automatically_derived]
impl<T: ::sails_type_registry::TypeInfo, const N: usize> ::sails_type_registry::TypeInfo
for Generics<T, N> {
    type Identity = Self;
    fn module_path() -> &'static str {
        ::core::module_path!()
    }
    fn type_decl(
        registry: &mut ::sails_type_registry::Registry,
    ) -> ::sails_type_registry::ast::TypeDecl {
        let base_name = ::sails_type_registry::const_suffixed_name(
            "Generics",
            ::sails_type_registry::alloc::vec![
                (::sails_type_registry::alloc::string::String::from("N"),
                ::sails_type_registry::alloc::format!("{}", N),)
            ],
        );
        let generics = ::sails_type_registry::alloc::vec![
            < T as ::sails_type_registry::TypeInfo > ::type_decl(registry)
        ];
        registry
            .register_named_type_with_dependencies(
                <Self as ::sails_type_registry::TypeInfo>::META,
                base_name,
                generics,
                |registry| {
                    let _ = <Vec<
                        Vec<T>,
                    > as ::sails_type_registry::TypeInfo>::type_decl(registry);
                    let _ = <[T; N] as ::sails_type_registry::TypeInfo>::type_decl(
                        registry,
                    );
                    let _ = <Result<
                        Option<T>,
                        String,
                    > as ::sails_type_registry::TypeInfo>::type_decl(registry);
                },
            )
    }
    fn type_def(
        _registry: &mut ::sails_type_registry::Registry,
    ) -> ::core::option::Option<::sails_type_registry::ast::Type> {
        let base_name = ::sails_type_registry::const_suffixed_name(
            "Generics",
            ::sails_type_registry::alloc::vec![
                (::sails_type_registry::alloc::string::String::from("N"),
                ::sails_type_registry::alloc::format!("{}", N),)
            ],
        );
        ::core::option::Option::Some({
            let __builder = ::sails_type_registry::builder::TypeBuilder::new()
                .name(base_name)
                .param("T");
            let composite = __builder.composite();
            composite
                .field("matrix")
                .doc("Nested generics")
                .ty(::sails_type_registry::ast::TypeDecl::Slice {
                    item: ::sails_type_registry::alloc::boxed::Box::new(::sails_type_registry::ast::TypeDecl::Slice {
                        item: ::sails_type_registry::alloc::boxed::Box::new(
                            ::sails_type_registry::ast::TypeDecl::generic("T"),
                        ),
                    }),
                })
                .field("data")
                .doc("Array with const param")
                .ty(::sails_type_registry::ast::TypeDecl::Array {
                    item: ::sails_type_registry::alloc::boxed::Box::new(
                        ::sails_type_registry::ast::TypeDecl::generic("T"),
                    ),
                    len: (N) as u32,
                })
                .field("result")
                .doc("Complex path with generics")
                .ty(
                    ::sails_type_registry::ast::TypeDecl::named_with_generics(
                        "Result",
                        ::sails_type_registry::alloc::vec![
                            ::sails_type_registry::ast::TypeDecl::named_with_generics("Option",
                            ::sails_type_registry::alloc::vec![::sails_type_registry::ast::TypeDecl::generic("T")],),
                            ::sails_type_registry::ast::TypeDecl::Primitive(::sails_type_registry::ast::PrimitiveType::String)
                        ],
                    ),
                )
                .build()
        })
    }
}
