rs/type-registry/derive/tests/snapshots/unit_struct.snap
---
source: rs/type-registry/derive/src/lib.rs
expression: formatted
---
#[automatically_derived]
impl ::sails_type_registry::TypeInfo for Unit {
    type Identity = Self;
    fn type_info(
        registry: &mut ::sails_type_registry::Registry,
    ) -> ::sails_type_registry::ty::Type {
        let mut type_builder = ::sails_type_registry::builder::TypeBuilder::new()
            .module_path(::core::module_path!())
            .name("Unit");
        type_builder.composite().build()
    }
}
